--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,8 +3,6 @@
 // Bootstrap
 @import '../../node_modules/bootstrap/scss/bootstrap';
 
-// Bootstrap Functions
-// @import "../../node_modules/bootstrap/scss/functions";
-
-
 @import 'bootswatch.scss';
+
+@import './views/views';
