--- a/resources/sass/views/_dashboard.scss
+++ b/resources/sass/views/_dashboard.scss
@@ -39,6 +39,19 @@
     height: 245px;
 }
 
+.h-350{
+    height: 350px;
+}
+
+.h-300{
+    height: 300px;
+}
+
+.h-400 {
+    height: 400px;
+}
+
+
 .card {
     border-width: 3px;
 }
